<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="placeholder">Placeholder</string>

    <string name="login_fragment_label">Login</string>
    <string name="game_fragment_label">Tic Tac Toe: Game</string>
    <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

    <string name="login">Log In</string>
    <string name="logout">Log Out</string>

    <string name="new_game">New Game</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="blank"> </string>

    <string name="new_game_dialog_message">Which type of game do you want to create?</string>
    <string name="forfeit_game_dialog_message">Are you sure you want to forfeit this game?</string>

    <string name="two_player">Two-Player</string>
    <string name="one_player">One-Player</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="open_games">Open Games</string>
    <string name="your_turn">Your turn</string>
    <string name="waiting">Waiting</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You lose…</string>
    <string name="error">Error!</string>
    <string name="draw">Match draw</string>
    <string name="draws">Draws</string>
    <string name="copy">Copy Game ID</string>
    <string name="game_id">Game ID:</string>
    <string name="register">Register</string>
    <string name="host">Host:</string>
    <string name="challenger">Challenger:</string>
    <string name="their_turn">Their turn</string>
    <string name="deregister">De-register</string>
</resources>